Fix some button alignment and the .box-reason alignment

--- a/css/include/buttons.styl
+++ b/css/include/buttons.styl
@@ -3,7 +3,7 @@
 .button
   color white
   background-color darkBlue
-  padding 30px 40px 30px 100px
+  padding 30px 40px
   font-size 1em
   font-weight 700
   text-transform uppercase
