--- a/css/include/layout.styl
+++ b/css/include/layout.styl
@@ -36,8 +36,8 @@ section
     background-color lighten(blue, 3)
     transition background-color 250ms
     cursor default
-    padding 20px
-    min-height 200px
+    padding 10px 20px
+    min-height 260px
 
     &:hover
       background-color lighten(blue, 5)
