--- a/public/css/app.css
+++ b/public/css/app.css
@@ -58,7 +58,7 @@ header #header-share:hover{color:#222}
 #share-box li{display:inline;margin:0 3px;}
 #share-box li:last-child{margin-right:0}
 #share-box li a{font-size:1.5em;transition:color 250ms}
-.button{color:#fff;background-color:#207c9f;padding:30px 40px 30px 100px;font-size:1em;font-weight:700;text-transform:uppercase;margin:20px 0;box-shadow:10px 10px 0 #15536a;transition:background-color 100ms,margin 100ms,box-shadow 100ms;position:relative;float:left;}
+.button{color:#fff;background-color:#207c9f;padding:30px 40px;font-size:1em;font-weight:700;text-transform:uppercase;margin:20px 0;box-shadow:10px 10px 0 #15536a;transition:background-color 100ms,margin 100ms,box-shadow 100ms;position:relative;float:left;}
 .button:hover{background-color:#2283a7;color:#fff}
 .button:active{box-shadow:none;margin:30px -10px 10px 10px}
 .button .button-inner{background-color:#1e7597;position:absolute;left:0;top:0;height:100%;padding:0 20px;line-height:89px}
@@ -69,7 +69,7 @@ section{padding:40px 0;clear:both;min-width:1040px}
 #reasons{margin-top:40px;margin-bottom:0;overflow:hidden}
 .box{float:left;width:280px;margin:0 20px 20px 0;}
 .box-last{margin:0 0 20px 0}
-.box-reason{background-color:#38abd7;transition:background-color 250ms;cursor:default;padding:20px;min-height:200px;}
+.box-reason{background-color:#38abd7;transition:background-color 250ms;cursor:default;padding:10px 20px;min-height:260px;}
 .box-reason:hover{background-color:#40afd8}
 .box-speaker{width:235px;margin-bottom:40px;}
 .box-speaker h3{margin-bottom:0}
